idk what is happenign anymore

--- a/Firmware_PIC/shinstrap_alpha0.X/nbproject/Makefile-genesis.properties
+++ b/Firmware_PIC/shinstrap_alpha0.X/nbproject/Makefile-genesis.properties
@@ -1,14 +1,13 @@
 #
-#Wed Jul 20 15:24:16 PDT 2022
-default.languagetoolchain.version=2.36
-default.Pack.dfplocation=
+#Fri Jul 29 21:38:03 PDT 2022
+default.languagetoolchain.version=2.35
+default.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v5.50\\packs\\Microchip\\PIC18F-Q_DFP\\1.11.185
 conf.ids=default
-default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v2.36\\bin
-host.id=2k6x-e3ig-rv
-configurations-xml=c3967323383929f04da14d8cdf5e2e17
-default.com-microchip-mplab-mdbcore-snap-SnapToolImpl.md5=eaa336cefb7fc46db8b50b7b2b6e54ca
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=6e02ca5e9f5042ffd365b42ab82d3a9b
+default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v2.35\\bin
+host.id=2f46-84o5-4u
+configurations-xml=cb1664cd4246f41dd205c8daef975152
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=5232c20b48df3223daf8c79e5b83e9a8
 user-defined-mime-resolver-xml=none
-default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=ab1e0737b447a24f7366e9fd8fe5a2f0
+default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=5fbf721ae6fdf6c15e177315c00dc55e
 proj.dir=C\:\\Users\\juddf\\Documents\\Capstone\\Firmware_PIC\\shinstrap_alpha0.X
 host.platform=windows
