--- a/Firmware_ESP32/alpha1/.vscode/settings.json
+++ b/Firmware_ESP32/alpha1/.vscode/settings.json
@@ -3,9 +3,12 @@
     "idf.openOcdConfigs": [
         "board/esp32s3-builtin.cfg"
     ],
-    "idf.portWin": "COM10",
+    "idf.portWin": "COM26",
     "idf.flashType": "UART",
     "files.associations": {
-        "blehr_sens.h": "c"
+        "blehr_sens.h": "c",
+        "bt_st.h": "c",
+        "dac_st.h": "c",
+        "ipu_st.h": "c"
     }
 }
